--- a/src/home.css
+++ b/src/home.css
@@ -1,11 +1,18 @@
 .left{
     float:left;  
     margin-left: 300px;
+    margin-top: 100px;
+  }
+  .middle{
+    float:left;  
+    margin-left: 120px;
+    margin-top: 200px;
   }
 
   .right{
     float:right;  
     margin-right: 300px;
+    margin-top: 100px;
   }
 
   img{
